fixed comments and spacing

--- a/web/scholars.css
+++ b/web/scholars.css
@@ -1,6 +1,8 @@
 
 body {
   background-color: bisque;
+  width: 100%;
+  height: 100%;
 }
 
 svg {
